EFR-254 Fix two bugs - not playing the VAST ad in browser layout; better fullscreen on IE10.

--- a/video_ad_demo/styles/default_layout.css
+++ b/video_ad_demo/styles/default_layout.css
@@ -23,7 +23,7 @@
     height: 100% !important;
     top: 0;
     left: 0;
-    position: absolute;
+    position: fixed;
     z-index: 99999;
 }
 
